2009-05-20  higepon  <higepon@users.sourceforge.jp>

        * main.cpp : wait all threads.

2009-05-19  higepon  <higepon@users.sourceforge.jp>

        * scheme.h: Added prototype of GC_dlopen. (Boehm GC 7.1 lacks it).

        * configure.ac: Added GC_XXX_THREADS.

        * MultiVMProcedures.cpp : Added (make-vm thunk-sexp import-spec-sexp . name) procedure.

2009-05-18  higepon  <higepon@users.sourceforge.jp>

        * Added Mutex.

        * OSCompatThread.h: Added basic functionality.

        * OSCompatThreadTest.cpp : Added.

        * OSCompatThread.h : Added for threads. Not yet working.

2009-05-15  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp : Refactoring display and putDatum using C++ function template.
                                  Thanks to herumi-san.

2009-05-13  higepon  <higepon@users.sourceforge.jp>

        * Ratnum.h : Reduce the memory allocation in aritmetic operations.

        * Bignum.h : Reduce the memory allocation in aritmetic operations.

2009-05-12  higepon  <higepon@users.sourceforge.jp>

        * Bignum.h (scheme): Be sure to call mpz_clear when Bignum is GCed. thanks to enami-san.

        * lib/mosh/pp.ss (mosh): Improved the output of pp. (Issue 56).

        * test/print.scm: Added.

2009-05-11  higepon  <higepon@users.sourceforge.jp>

        * VM-Run.cpp (run): Fixed Issue 55. check argument of append.

        * ByteVector.h (scheme): Fixed the bug on Big Endian.

2009-05-07  higepon  <higepon@users.sourceforge.jp>

        * ByteVector.h (scheme): Fiexd strct-aliasing problems.

        * Makefile.am (install-data-hook): Fixed the bug of installation-path.

2009-05-01  higepon  <higepon@users.sourceforge.jp>

        * TestingVM.cpp : Moved last Flash type.

2009-05-01  kokosabu  <kokosabu@gmail.com>

        * Added : auto port close.

2009-04-29  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/ffi.ss : Exported sizeof(c-type) align:of, on-linux and on-windows.
